--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -2,7 +2,7 @@
 jdbc.driver = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/physolymp?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&serverTimezone=UTC
 jdbc.user = root
-jdbc.password = password
+jdbc.password = 123456
 
 # connection pool properties
 connection.pool.initialPoolSize = 5
